manifests/log-output-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: hash
          emptyDir: {}
      containers:
        - name: log-output-hash
          image: mixu78/log-output-hash:2.01
          volumeMounts:
            - name: hash
              mountPath: /usr/src/app/files

        - name: log-output-log
          image: mixu78/log-output-log:2.01
          volumeMounts:
            - name: hash
              mountPath: /usr/src/app/files
