manifests/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-lb
  namespace: log-output
spec:
  type: LoadBalancer
  selector:
    app: log-output
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-lb
  namespace: log-output
spec:
  type: LoadBalancer
  selector:
    app: ping-pong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
