manifests/log-output-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: log-output
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - name: log-output
      port: 80
      protocol: TCP
      targetPort: 3000
