manifests/ping-pong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: log-output
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - name: ping-pong
      port: 80
      protocol: TCP
      targetPort: 3001
