manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - name: log-output
      port: 2222
      protocol: TCP
      targetPort: 3000
    - name: ping-pong
      port: 2223
      protocol: TCP
      targetPort: 3001
